--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- webform.pw -->
+		<script> web_form_id = "ded17652-2646-428c-a4ea-43efdb0433e0" </script>
+		<script type="text/javascript" src="https://webform.pw/client/formclient.nocache.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -67,14 +70,10 @@
 									<tr>
 										<td>MapInfo</td>
 										<td>MicroSurvey</td>
-										<td>Python</td>
-										<td>PostgreSQL DBMS</td>
-									</tr>
-									<tr>
-										<td>MapInfo</td>
-										<td>MicroSurvey</td>
 										<td>JavaScript</td>
-										<td>PostGIS</td>
+										<td>PostGIS DBMS</td>
+									</tr>
+
 									</tr>
 									<tr>
 										<td>Manifold</td>
@@ -401,11 +400,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Slobodan Stepic" />
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Peter Markus" />
 											</div>
 											<div class="field half">
 												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="slobodansstepic@gmail.com" />
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="example@gmail.com" />
 											</div>
 											<div class="field">
 												<label for="demo-category">Category</label>
